// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests - Simple > should render basic HTML elements consistently 1`] = `
<div
  class="min-h-screen bg-gray-50"
>
  <div
    class="p-4 bg-white rounded-lg shadow"
  >
    <h1
      class="text-2xl font-bold text-gray-900"
    >
      Test Title
    </h1>
    <p
      class="text-gray-600 mt-2"
    >
      Test description text
    </p>
    <button
      class="mt-4 px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
    >
      Test Button
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests - Simple > should render form elements consistently 1`] = `
<div
  class="min-h-screen bg-gray-50"
>
  <form
    class="space-y-4 p-6 bg-white rounded-lg"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="test-input"
      >
        Test Input
      </label>
      <input
        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md"
        id="test-input"
        placeholder="Enter text"
        type="text"
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="test-select"
      >
        Test Select
      </label>
      <select
        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md"
        id="test-select"
      >
        <option
          value=""
        >
          Select option
        </option>
        <option
          value="option1"
        >
          Option 1
        </option>
        <option
          value="option2"
        >
          Option 2
        </option>
      </select>
    </div>
  </form>
</div>
`;

exports[`Visual Regression Tests - Simple > should render grid layouts consistently 1`] = `
<div
  class="min-h-screen bg-gray-50"
>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4"
  >
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        1
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        2
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        3
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        4
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        5
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
    <div
      class="p-4 bg-white rounded-lg shadow"
    >
      <h3
        class="font-semibold"
      >
        Card 
        6
      </h3>
      <p
        class="text-gray-600 mt-2"
      >
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests - Simple > should render test wrapper correctly 1`] = `
<div
  class="min-h-screen bg-gray-50"
>
  <div
    data-testid="test-content"
  >
    Test Content
  </div>
</div>
`;
